adição de eventos

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <header>
-        <h1>TEMPORADAS</h1>
+        <h1 class="titulo">TEMPORADAS</h1>
+        
         <select name="Selecione a Temporada" value="Selecione a Temporada" id="select">
             <option value="default">Selecione a Temporada</option>
             <option value="Temporada 01">Temporada 01</option>
             <option value="Temporada 02">Temporada 02</option>
-            <option value="Temporada 03">Temporada 03</option>
+            <!-- <option value="Temporada 03">Temporada 03</option>
             <option value="Temporada 04">Temporada 04</option>
             <option value="Temporada 05">Temporada 05</option>
             <option value="Temporada 06">Temporada 06</option>
@@ -23,24 +24,27 @@
             <option value="Temporada 09">Temporada 09</option>
             <option value="Temporada 10">Temporada 10</option>
             <option value="Temporada 11">Temporada 11</option>
-            <option value="Temporada 12">Temporada 12</option>
+            <option value="Temporada 12">Temporada 12</option> -->
         </select>
+
+        <!-- BOTÃO BUSCAR -->
         <button onclick="selectTemp()" type="submit">BUSCAR</button>
+
         <!-- PRIMEIRA TEMPORADA -->
         <div class="containerEps"> 
-            <p onclick="pri()" class="Episódio_01">Episódio_01</p>
-            <p onclick="seg()" class="Episódio_02">Episódio_02</p>
-            <p onclick="ter()" class="Episódio_03">Episódio_03</p>
-            <p onclick="qua()" class="Episódio_04">Episódio_04</p>
-            <p onclick="qui()" class="Episódio_05">Episódio_05</p>
-            <p onclick="sex()" class="Episódio_06">Episódio_06</p>
-            <p onclick="set()" class="Episódio_07">Episódio_07</p>
-            <p onclick="oit()" class="Episódio_08">Episódio_08</p>
-            <p onclick="non()" class="Episódio_09">Episódio_09</p>
-            <p onclick="dec()" class="Episódio_10">Episódio_10</p>
-            <p onclick="decp()" class="Episódio_11">Episódio_11</p>
-            <p onclick="decs()" class="Episódio_12">Episódio_12</p>
-            <p onclick="dect()" class="Episódio_13">Episódio_13</p>
+            <p onclick="pri()"    class="Episódio_01">Episódio_01</p>
+            <p onclick="seg()"    class="Episódio_02">Episódio_02</p>
+            <p onclick="ter()"    class="Episódio_03">Episódio_03</p>
+            <p onclick="qua()"    class="Episódio_04">Episódio_04</p>
+            <p onclick="qui()"    class="Episódio_05">Episódio_05</p>
+            <p onclick="sex()"    class="Episódio_06">Episódio_06</p>
+            <p onclick="set()"    class="Episódio_07">Episódio_07</p>
+            <p onclick="oit()"    class="Episódio_08">Episódio_08</p>
+            <p onclick="non()"    class="Episódio_09">Episódio_09</p>
+            <p onclick="dec()"    class="Episódio_10">Episódio_10</p>
+            <p onclick="decp()"   class="Episódio_11">Episódio_11</p>
+            <p onclick="decs()"   class="Episódio_12">Episódio_12</p>
+            <p onclick="dect()"   class="Episódio_13">Episódio_13</p>
             <p onclick="decqua()" class="Episódio_14">Episódio_14</p>
             <p onclick="decqui()" class="Episódio_15">Episódio_15</p>
             <p onclick="decsex()" class="Episódio_16">Episódio_16</p>
@@ -48,26 +52,26 @@
         </div>
         <!--  SEGUNDA TEMPORADA -->
         <div class="containerEps2">
-            <p onclick="pri2()" class="Episódio_01">Episódio_01</p>
-            <p onclick="seg2()" class="Episódio_02">Episódio_02</p>
-            <p onclick="ter2()" class="Episódio_03">Episódio_03</p>
-            <p onclick="qua2()" class="Episódio_04">Episódio_04</p>
-            <p onclick="qui2()" class="Episódio_05">Episódio_05</p>
-            <p onclick="sex2()" class="Episódio_06">Episódio_06</p>
-            <p onclick="set2()" class="Episódio_07">Episódio_07</p>
-            <p onclick="oit2()" class="Episódio_08">Episódio_08</p>
-            <p onclick="non2()" class="Episódio_09">Episódio_09</p>
-            <p onclick="dec2()" class="Episódio_10">Episódio_10</p>
-            <p onclick="decp2()" class="Episódio_11">Episódio_11</p>
-            <p onclick="decs2()" class="Episódio_12">Episódio_12</p>
-            <p onclick="dect2()" class="Episódio_13">Episódio_13</p>
+            <p onclick="pri2()"    class="Episódio_01">Episódio_01</p>
+            <p onclick="seg2()"    class="Episódio_02">Episódio_02</p>
+            <p onclick="ter2()"    class="Episódio_03">Episódio_03</p>
+            <p onclick="qua2()"    class="Episódio_04">Episódio_04</p>
+            <p onclick="qui2()"    class="Episódio_05">Episódio_05</p>
+            <p onclick="sex2()"    class="Episódio_06">Episódio_06</p>
+            <p onclick="set2()"    class="Episódio_07">Episódio_07</p>
+            <p onclick="oit2()"    class="Episódio_08">Episódio_08</p>
+            <p onclick="non2()"    class="Episódio_09">Episódio_09</p>
+            <p onclick="dec2()"    class="Episódio_10">Episódio_10</p>
+            <p onclick="decp2()"   class="Episódio_11">Episódio_11</p>
+            <p onclick="decs2()"   class="Episódio_12">Episódio_12</p>
+            <p onclick="dect2()"   class="Episódio_13">Episódio_13</p>
             <p onclick="decqua2()" class="Episódio_14">Episódio_14</p>
             <p onclick="decqui2()" class="Episódio_15">Episódio_15</p>
             <p onclick="decsex2()" class="Episódio_16">Episódio_16</p>
             <p onclick="decset2()" class="Episódio_17">Episódio_17</p>
             <p onclick="decoit2()" class="Episódio_17">Episódio_18</p>
             <p onclick="decnon2()" class="Episódio_17">Episódio_19</p>
-            <p onclick="vig2()" class="Episódio_17">Episódio_20</p>
+            <p onclick="vig2()"    class="Episódio_17">Episódio_20</p>
             <p onclick="vigpri2()" class="Episódio_17">Episódio_21</p>
             <p onclick="vigseg2()" class="Episódio_17">Episódio_22</p>
             <p onclick="vigter2()" class="Episódio_17">Episódio_23</p>
