inclusão da terceira temporada

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <option value="default">Selecione a Temporada</option>
             <option value="Temporada 01">Temporada 01</option>
             <option value="Temporada 02">Temporada 02</option>
-            <!-- <option value="Temporada 03">Temporada 03</option>
-            <option value="Temporada 04">Temporada 04</option>
+            <option value="Temporada 03">Temporada 03</option>
+            <!-- <option value="Temporada 04">Temporada 04</option>
             <option value="Temporada 05">Temporada 05</option>
             <option value="Temporada 06">Temporada 06</option>
             <option value="Temporada 07">Temporada 07</option>
@@ -75,6 +75,31 @@
             <p onclick="vigpri2()" class="Episódio_17">Episódio_21</p>
             <p onclick="vigseg2()" class="Episódio_17">Episódio_22</p>
             <p onclick="vigter2()" class="Episódio_17">Episódio_23</p>
+        </div>
+        <!-- TERCEIRA TEMPORADA -->
+        <div class="containerEps3">
+            <p onclick="pri3()"    class="Episódio_01">Episódio_01</p>
+            <p onclick="seg3()"    class="Episódio_02">Episódio_02</p>
+            <p onclick="ter3()"    class="Episódio_03">Episódio_03</p>
+            <p onclick="qua3()"    class="Episódio_04">Episódio_04</p>
+            <p onclick="qui3()"    class="Episódio_05">Episódio_05</p>
+            <p onclick="sex3()"    class="Episódio_06">Episódio_06</p>
+            <p onclick="set3()"    class="Episódio_07">Episódio_07</p>
+            <p onclick="oit3()"    class="Episódio_08">Episódio_08</p>
+            <p onclick="non3()"    class="Episódio_09">Episódio_09</p>
+            <p onclick="dec3()"    class="Episódio_10">Episódio_10</p>
+            <p onclick="decp3()"   class="Episódio_11">Episódio_11</p>
+            <p onclick="decs3()"   class="Episódio_12">Episódio_12</p>
+            <p onclick="dect3()"   class="Episódio_13">Episódio_13</p>
+            <p onclick="decqua3()" class="Episódio_14">Episódio_14</p>
+            <p onclick="decqui3()" class="Episódio_15">Episódio_15</p>
+            <p onclick="decsex3()" class="Episódio_16">Episódio_16</p>
+            <p onclick="decset3()" class="Episódio_17">Episódio_17</p>
+            <p onclick="decoit3()" class="Episódio_17">Episódio_18</p>
+            <p onclick="decnon3()" class="Episódio_17">Episódio_19</p>
+            <p onclick="vig3()"    class="Episódio_17">Episódio_20</p>
+            <p onclick="vigpri3()" class="Episódio_17">Episódio_21</p>
+            <p onclick="vigseg3()" class="Episódio_17">Episódio_22</p>
         </div>
         <div>
             <video poster="img/bg5.jpg" controls class="movie" src=""></video>
