adição da quarta temporada

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <p onclick="vig4()"    class="Episódio_20">Episódio_20</p>
             <p onclick="vigpri4()" class="Episódio_21">Episódio_21</p>
             <p onclick="vigseg4()" class="Episódio_22">Episódio_22</p>
-            <p onclick="vigseg4()" class="Episódio_23">Episódio_23</p>
+            <p onclick="vigter4()" class="Episódio_23">Episódio_23</p>
         </div>
         <div>
             <video poster="img/bg5.jpg" controls class="movie" src=""></video>
