--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <!-- BOTÃO BUSCAR -->
         <button onclick="selectTemp()" type="submit">BUSCAR</button>
+
         <div class="containerClose">
             <img onclick="buttonCloseVideo()" class="closeButton" width="30px" src="img/close .png" alt="botão de fechar o video">
         </div>
@@ -107,15 +108,15 @@
         </div>
         <!-- QUARTA TEMPORADA -->
         <div class="containerEps4">
-            <p onclick="seg4()"    class="Episódio_01">Episódio_01</p>
-            <p onclick="ter4()"    class="Episódio_02">Episódio_03</p>
-            <p onclick="qua4()"    class="Episódio_03">Episódio_04</p>
-            <p onclick="qui4()"    class="Episódio_04">Episódio_05</p>
-            <p onclick="sex4()"    class="Episódio_05">Episódio_06</p>
-            <p onclick="set4()"    class="Episódio_06">Episódio_07</p>
-            <p onclick="oit4()"    class="Episódio_07">Episódio_08</p>
-            <p onclick="non4()"    class="Episódio_08">Episódio_09</p>
-            <p onclick="pri4()"    class="Episódio_09">Episódio_10</p>
+            <p onclick="pri4()"    class="Episódio_01">Episódio_01</p>
+            <p onclick="seg4()"    class="Episódio_02">Episódio_02</p>
+            <p onclick="ter4()"    class="Episódio_03">Episódio_03</p>
+            <p onclick="qua4()"    class="Episódio_04">Episódio_04</p>
+            <p onclick="qui4()"    class="Episódio_05">Episódio_05</p>
+            <p onclick="sex4()"    class="Episódio_06">Episódio_06</p>
+            <p onclick="set4()"    class="Episódio_07">Episódio_07</p>
+            <p onclick="oit4()"    class="Episódio_08">Episódio_08</p>
+            <p onclick="non4()"    class="Episódio_09">Episódio_09</p>
             <p onclick="dec4()"    class="Episódio_10">Episódio_10</p>
             <p onclick="decp4()"   class="Episódio_11">Episódio_11</p>
             <p onclick="decs4()"   class="Episódio_12">Episódio_12</p>
@@ -130,6 +131,7 @@
             <p onclick="vigpri4()" class="Episódio_21">Episódio_21</p>
             <p onclick="vigseg4()" class="Episódio_22">Episódio_22</p>
             <p onclick="vigter4()" class="Episódio_23">Episódio_23</p>
+            <p onclick="vigqua4()" class="Episódio_24">Episódio_24</p>
         </div>
         <div>
             <video poster="img/bg5.jpg" controls class="movie" src=""></video>
