adição da quinta temporada

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <option value="Temporada 02">Temporada 02</option>
             <option value="Temporada 03">Temporada 03</option>
             <option value="Temporada 04">Temporada 04</option>
-            <!-- <option value="Temporada 05">Temporada 05</option>
-            <option value="Temporada 06">Temporada 06</option>
+            <option value="Temporada 05">Temporada 05</option>
+            <!-- <option value="Temporada 06">Temporada 06</option>
             <option value="Temporada 07">Temporada 07</option>
             <option value="Temporada 08">Temporada 08</option>
             <option value="Temporada 09">Temporada 09</option>
@@ -133,6 +133,36 @@
             <p onclick="vigter4()" class="Episódio_23">Episódio_23</p>
             <p onclick="vigqua4()" class="Episódio_24">Episódio_24</p>
         </div>
+        <!-- QUINTA TEMPORADA -->
+        <div class="containerEps5">
+            <p onclick="pri5()"    class="Episódio_01">Episódio_01</p>
+            <p onclick="seg5()"    class="Episódio_02">Episódio_02</p>
+            <p onclick="ter5()"    class="Episódio_03">Episódio_03</p>
+            <p onclick="qua5()"    class="Episódio_04">Episódio_04</p>
+            <p onclick="qui5()"    class="Episódio_05">Episódio_05</p>
+            <p onclick="sex5()"    class="Episódio_06">Episódio_06</p>
+            <p onclick="set5()"    class="Episódio_07">Episódio_07</p>
+            <p onclick="oit5()"    class="Episódio_08">Episódio_08</p>
+            <p onclick="non5()"    class="Episódio_09">Episódio_09</p>
+            <p onclick="dec5()"    class="Episódio_10">Episódio_10</p>
+            <p onclick="decp5()"   class="Episódio_11">Episódio_11</p>
+            <p onclick="decs5()"   class="Episódio_12">Episódio_12</p>
+            <p onclick="dect5()"   class="Episódio_13">Episódio_13</p>
+            <p onclick="decqua5()" class="Episódio_14">Episódio_14</p>
+            <p onclick="decqui5()" class="Episódio_15">Episódio_15</p>
+            <p onclick="decsex5()" class="Episódio_16">Episódio_16</p>
+            <p onclick="decset5()" class="Episódio_17">Episódio_17</p>
+            <p onclick="decoit5()" class="Episódio_18">Episódio_18</p>
+            <p onclick="decnon5()" class="Episódio_19">Episódio_19</p>
+            <p onclick="vig5()"    class="Episódio_20">Episódio_20</p>
+            <p onclick="vigpri5()" class="Episódio_21">Episódio_21</p>
+            <p onclick="vigseg5()" class="Episódio_22">Episódio_22</p>
+            <p onclick="vigter5()" class="Episódio_23">Episódio_23</p>
+            <p onclick="vigqua5()" class="Episódio_24">Episódio_24</p>
+        </div>
+
+
+
         <div>
             <video poster="img/bg5.jpg" controls class="movie" src=""></video>
         </div>
