adição de todas as temporadas

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <option value="Temporada 03">Temporada 03</option>
             <option value="Temporada 04">Temporada 04</option>
             <option value="Temporada 05">Temporada 05</option>
-            <!-- <option value="Temporada 06">Temporada 06</option>
+            <option value="Temporada 06">Temporada 06</option>
             <option value="Temporada 07">Temporada 07</option>
             <option value="Temporada 08">Temporada 08</option>
             <option value="Temporada 09">Temporada 09</option>
             <option value="Temporada 10">Temporada 10</option>
             <option value="Temporada 11">Temporada 11</option>
-            <option value="Temporada 12">Temporada 12</option> -->
+            <option value="Temporada 12">Temporada 12</option>
         </select>
 
         <!-- BOTÃO BUSCAR -->
@@ -161,6 +161,201 @@
             <p onclick="vigqua5()" class="Episódio_24">Episódio_24</p>
         </div>
 
+        <!-- SEXTA TEMPORADA -->
+        <div class="containerEps6">
+            <p onclick="pri6()"    class="Episódio_01">Episódio_01</p>
+            <p onclick="seg6()"    class="Episódio_02">Episódio_02</p>
+            <p onclick="ter6()"    class="Episódio_03">Episódio_03</p>
+            <p onclick="qua6()"    class="Episódio_04">Episódio_04</p>
+            <p onclick="qui6()"    class="Episódio_05">Episódio_05</p>
+            <p onclick="sex6()"    class="Episódio_06">Episódio_06</p>
+            <p onclick="set6()"    class="Episódio_07">Episódio_07</p>
+            <p onclick="oit6()"    class="Episódio_08">Episódio_08</p>
+            <p onclick="non6()"    class="Episódio_09">Episódio_09</p>
+            <p onclick="dec6()"    class="Episódio_10">Episódio_10</p>
+            <p onclick="decp6()"   class="Episódio_11">Episódio_11</p>
+            <p onclick="decs6()"   class="Episódio_12">Episódio_12</p>
+            <p onclick="dect6()"   class="Episódio_13">Episódio_13</p>
+            <p onclick="decqua6()" class="Episódio_14">Episódio_14</p>
+            <p onclick="decqui6()" class="Episódio_15">Episódio_15</p>
+            <p onclick="decsex6()" class="Episódio_16">Episódio_16</p>
+            <p onclick="decset6()" class="Episódio_17">Episódio_17</p>
+            <p onclick="decoit6()" class="Episódio_18">Episódio_18</p>
+            <p onclick="decnon6()" class="Episódio_19">Episódio_19</p>
+            <p onclick="vig6()"    class="Episódio_20">Episódio_20</p>
+            <p onclick="vigpri6()" class="Episódio_21">Episódio_21</p>
+            <p onclick="vigseg6()" class="Episódio_22">Episódio_22</p>
+            <p onclick="vigter6()" class="Episódio_23">Episódio_23</p>
+            <p onclick="vigqua6()" class="Episódio_24">Episódio_24</p>
+        </div>
+
+        <!-- SETIMA TEMPORADA -->
+        <div class="containerEps7">
+            <p onclick="pri7()"    class="Episódio_01">Episódio_01</p>
+            <p onclick="seg7()"    class="Episódio_02">Episódio_02</p>
+            <p onclick="ter7()"    class="Episódio_03">Episódio_03</p>
+            <p onclick="qua7()"    class="Episódio_04">Episódio_04</p>
+            <p onclick="qui7()"    class="Episódio_05">Episódio_05</p>
+            <p onclick="sex7()"    class="Episódio_06">Episódio_06</p>
+            <p onclick="set7()"    class="Episódio_07">Episódio_07</p>
+            <p onclick="oit7()"    class="Episódio_08">Episódio_08</p>
+            <p onclick="non7()"    class="Episódio_09">Episódio_09</p>
+            <p onclick="dec7()"    class="Episódio_10">Episódio_10</p>
+            <p onclick="decp7()"   class="Episódio_11">Episódio_11</p>
+            <p onclick="decs7()"   class="Episódio_12">Episódio_12</p>
+            <p onclick="dect7()"   class="Episódio_13">Episódio_13</p>
+            <p onclick="decqua7()" class="Episódio_14">Episódio_14</p>
+            <p onclick="decqui7()" class="Episódio_15">Episódio_15</p>
+            <p onclick="decsex7()" class="Episódio_16">Episódio_16</p>
+            <p onclick="decset7()" class="Episódio_17">Episódio_17</p>
+            <p onclick="decoit7()" class="Episódio_18">Episódio_18</p>
+            <p onclick="decnon7()" class="Episódio_19">Episódio_19</p>
+            <p onclick="vig7()"    class="Episódio_20">Episódio_20</p>
+            <p onclick="vigpri7()" class="Episódio_21">Episódio_21</p>
+            <p onclick="vigseg7()" class="Episódio_22">Episódio_22</p>
+            <p onclick="vigter7()" class="Episódio_23">Episódio_23</p>
+            <p onclick="vigqua7()" class="Episódio_24">Episódio_24</p>
+        </div>
+
+        <!-- OITAVA TEMPORADA -->
+        <div class="containerEps8">
+            <p onclick="pri8()"    class="Episódio_01">Episódio_01</p>
+            <p onclick="seg8()"    class="Episódio_02">Episódio_02</p>
+            <p onclick="ter8()"    class="Episódio_03">Episódio_03</p>
+            <p onclick="qua8()"    class="Episódio_04">Episódio_04</p>
+            <p onclick="qui8()"    class="Episódio_05">Episódio_05</p>
+            <p onclick="sex8()"    class="Episódio_06">Episódio_06</p>
+            <p onclick="set8()"    class="Episódio_07">Episódio_07</p>
+            <p onclick="oit8()"    class="Episódio_08">Episódio_08</p>
+            <p onclick="non8()"    class="Episódio_09">Episódio_09</p>
+            <p onclick="dec8()"    class="Episódio_10">Episódio_10</p>
+            <p onclick="decp8()"   class="Episódio_11">Episódio_11</p>
+            <p onclick="decs8()"   class="Episódio_12">Episódio_12</p>
+            <p onclick="dect8()"   class="Episódio_13">Episódio_13</p>
+            <p onclick="decqua8()" class="Episódio_14">Episódio_14</p>
+            <p onclick="decqui8()" class="Episódio_15">Episódio_15</p>
+            <p onclick="decsex8()" class="Episódio_16">Episódio_16</p>
+            <p onclick="decset8()" class="Episódio_17">Episódio_17</p>
+            <p onclick="decoit8()" class="Episódio_18">Episódio_18</p>
+            <p onclick="decnon8()" class="Episódio_19">Episódio_19</p>
+            <p onclick="vig8()"    class="Episódio_20">Episódio_20</p>
+            <p onclick="vigpri8()" class="Episódio_21">Episódio_21</p>
+            <p onclick="vigseg8()" class="Episódio_22">Episódio_22</p>
+            <p onclick="vigter8()" class="Episódio_23">Episódio_23</p>
+            <p onclick="vigqua8()" class="Episódio_24">Episódio_24</p>
+        </div>
+
+        <!-- NONA TEMPORADA -->
+        <div class="containerEps9">
+            <p onclick="pri9()"    class="Episódio_01">Episódio_01</p>
+            <p onclick="seg9()"    class="Episódio_02">Episódio_02</p>
+            <p onclick="ter9()"    class="Episódio_03">Episódio_03</p>
+            <p onclick="qua9()"    class="Episódio_04">Episódio_04</p>
+            <p onclick="qui9()"    class="Episódio_05">Episódio_05</p>
+            <p onclick="sex9()"    class="Episódio_06">Episódio_06</p>
+            <p onclick="set9()"    class="Episódio_07">Episódio_07</p>
+            <p onclick="oit9()"    class="Episódio_08">Episódio_08</p>
+            <p onclick="non9()"    class="Episódio_09">Episódio_09</p>
+            <p onclick="dec9()"    class="Episódio_10">Episódio_10</p>
+            <p onclick="decp9()"   class="Episódio_11">Episódio_11</p>
+            <p onclick="decs9()"   class="Episódio_12">Episódio_12</p>
+            <p onclick="dect9()"   class="Episódio_13">Episódio_13</p>
+            <p onclick="decqua9()" class="Episódio_14">Episódio_14</p>
+            <p onclick="decqui9()" class="Episódio_15">Episódio_15</p>
+            <p onclick="decsex9()" class="Episódio_16">Episódio_16</p>
+            <p onclick="decset9()" class="Episódio_17">Episódio_17</p>
+            <p onclick="decoit9()" class="Episódio_18">Episódio_18</p>
+            <p onclick="decnon9()" class="Episódio_19">Episódio_19</p>
+            <p onclick="vig9()"    class="Episódio_20">Episódio_20</p>
+            <p onclick="vigpri9()" class="Episódio_21">Episódio_21</p>
+            <p onclick="vigseg9()" class="Episódio_22">Episódio_22</p>
+            <p onclick="vigter9()" class="Episódio_23">Episódio_23</p>
+            <p onclick="vigqua9()" class="Episódio_24">Episódio_24</p>
+        </div>
+
+        <!-- DECIMA TEMPORADA -->
+        <div class="containerEps10">
+            <p onclick="pri10()"    class="Episódio_01">Episódio_01</p>
+            <p onclick="seg10()"    class="Episódio_02">Episódio_02</p>
+            <p onclick="ter10()"    class="Episódio_03">Episódio_03</p>
+            <p onclick="qua10()"    class="Episódio_04">Episódio_04</p>
+            <p onclick="qui10()"    class="Episódio_05">Episódio_05</p>
+            <p onclick="sex10()"    class="Episódio_06">Episódio_06</p>
+            <p onclick="set10()"    class="Episódio_07">Episódio_07</p>
+            <p onclick="oit10()"    class="Episódio_08">Episódio_08</p>
+            <p onclick="non10()"    class="Episódio_09">Episódio_09</p>
+            <p onclick="dec10()"    class="Episódio_10">Episódio_10</p>
+            <p onclick="decp10()"   class="Episódio_11">Episódio_11</p>
+            <p onclick="decs10()"   class="Episódio_12">Episódio_12</p>
+            <p onclick="dect10()"   class="Episódio_13">Episódio_13</p>
+            <p onclick="decqua10()" class="Episódio_14">Episódio_14</p>
+            <p onclick="decqui10()" class="Episódio_15">Episódio_15</p>
+            <p onclick="decsex10()" class="Episódio_16">Episódio_16</p>
+            <p onclick="decset10()" class="Episódio_17">Episódio_17</p>
+            <p onclick="decoit10()" class="Episódio_18">Episódio_18</p>
+            <p onclick="decnon10()" class="Episódio_19">Episódio_19</p>
+            <p onclick="vig10()"    class="Episódio_20">Episódio_20</p>
+            <p onclick="vigpri10()" class="Episódio_21">Episódio_21</p>
+            <p onclick="vigseg10()" class="Episódio_22">Episódio_22</p>
+            <p onclick="vigter10()" class="Episódio_23">Episódio_23</p>
+            <p onclick="vigqua10()" class="Episódio_24">Episódio_24</p>
+        </div>
+
+        <!-- DECIMA PRIMEIRA TEMPORADA -->
+        <div class="containerEps11">
+            <p onclick="pri11()"    class="Episódio_01">Episódio_01</p>
+            <p onclick="seg11()"    class="Episódio_02">Episódio_02</p>
+            <p onclick="ter11()"    class="Episódio_03">Episódio_03</p>
+            <p onclick="qua11()"    class="Episódio_04">Episódio_04</p>
+            <p onclick="qui11()"    class="Episódio_05">Episódio_05</p>
+            <p onclick="sex11()"    class="Episódio_06">Episódio_06</p>
+            <p onclick="set11()"    class="Episódio_07">Episódio_07</p>
+            <p onclick="oit11()"    class="Episódio_08">Episódio_08</p>
+            <p onclick="non11()"    class="Episódio_09">Episódio_09</p>
+            <p onclick="dec11()"    class="Episódio_10">Episódio_10</p>
+            <p onclick="decp11()"   class="Episódio_11">Episódio_11</p>
+            <p onclick="decs11()"   class="Episódio_12">Episódio_12</p>
+            <p onclick="dect11()"   class="Episódio_13">Episódio_13</p>
+            <p onclick="decqua11()" class="Episódio_14">Episódio_14</p>
+            <p onclick="decqui11()" class="Episódio_15">Episódio_15</p>
+            <p onclick="decsex11()" class="Episódio_16">Episódio_16</p>
+            <p onclick="decset11()" class="Episódio_17">Episódio_17</p>
+            <p onclick="decoit11()" class="Episódio_18">Episódio_18</p>
+            <p onclick="decnon11()" class="Episódio_19">Episódio_19</p>
+            <p onclick="vig11()"    class="Episódio_20">Episódio_20</p>
+            <p onclick="vigpri11()" class="Episódio_21">Episódio_21</p>
+            <p onclick="vigseg11()" class="Episódio_22">Episódio_22</p>
+            <p onclick="vigter11()" class="Episódio_23">Episódio_23</p>
+            <p onclick="vigqua11()" class="Episódio_24">Episódio_24</p>
+        </div>
+
+        <!-- DECIMA SEGUNDA TEMPORADA -->
+        <div class="containerEps12">
+            <p onclick="pri12()"    class="Episódio_01">Episódio_01</p>
+            <p onclick="seg12()"    class="Episódio_02">Episódio_02</p>
+            <p onclick="ter12()"    class="Episódio_03">Episódio_03</p>
+            <p onclick="qua12()"    class="Episódio_04">Episódio_04</p>
+            <p onclick="qui12()"    class="Episódio_05">Episódio_05</p>
+            <p onclick="sex12()"    class="Episódio_06">Episódio_06</p>
+            <p onclick="set12()"    class="Episódio_07">Episódio_07</p>
+            <p onclick="oit12()"    class="Episódio_08">Episódio_08</p>
+            <p onclick="non12()"    class="Episódio_09">Episódio_09</p>
+            <p onclick="dec12()"    class="Episódio_10">Episódio_10</p>
+            <p onclick="decp12()"   class="Episódio_11">Episódio_11</p>
+            <p onclick="decs12()"   class="Episódio_12">Episódio_12</p>
+            <p onclick="dect12()"   class="Episódio_13">Episódio_13</p>
+            <p onclick="decqua12()" class="Episódio_14">Episódio_14</p>
+            <p onclick="decqui12()" class="Episódio_15">Episódio_15</p>
+            <p onclick="decsex12()" class="Episódio_16">Episódio_16</p>
+            <p onclick="decset12()" class="Episódio_17">Episódio_17</p>
+            <p onclick="decoit12()" class="Episódio_18">Episódio_18</p>
+            <p onclick="decnon12()" class="Episódio_19">Episódio_19</p>
+            <p onclick="vig12()"    class="Episódio_20">Episódio_20</p>
+            <p onclick="vigpri12()" class="Episódio_21">Episódio_21</p>
+            <p onclick="vigseg12()" class="Episódio_22">Episódio_22</p>
+            <p onclick="vigter12()" class="Episódio_23">Episódio_23</p>
+            <p onclick="vigqua12()" class="Episódio_24">Episódio_24</p>
+        </div>
 
 
         <div>
